--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="calculator-keys">
         <div class="row">
           <button class="all-clear">AC</button>
-          <button class="operator" value="%">%</button>
+          <button class="operator" value="%">%<br /><small style="font-size: 15px">Modulo</small></button>
           <button class="operator" value="/">&divide;</button>
         </div>
         <div class="row">
